Add atomic operations extension